adding landing page images and barebones structure of landing page

--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -1,5 +1,30 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
-  Matrimony UI
+  <div class="landing-nav">
+    <ul style="">
+      <li><a>Home</a></li>
+      <li><a>Dashboard</a></li>
+      <li><a>Register</a></li>
+      <li><a>Login</a></li>
+    </ul>
+  </div>
+  <img src="assets/landing-page/matr-image3" style="width: 99%; height: 400px">  
+  <div style="text-align: center">
+    <ul class="landing-login-register-btn">
+      <li style="border-right: 1px solid purple"><a>Register</a></li>
+      <li><a>Login</a></li>
+    </ul>
+  </div>
+  <div style="position: relative">
+    <img src="assets/landing-page/matr-image1" style="width: 49%; height: 300px">
+    <img src="assets/landing-page/matr-image2" style="width: 49%; height: 300px">
+  </div>
+  <div class="landing-footer-nav">
+    <ul>
+      <li style="border-right: 1px solid orangered">Chat with your partner</li>
+      <li style="border-right: 1px solid orangered">My ideal partner</li>
+      <li>Verify your profile</li>
+    </ul>
+  </div>
 </div>
 
