--- a/matrimony-ui/src/app/app.component.css
+++ b/matrimony-ui/src/app/app.component.css
@@ -1,8 +1,11 @@
 .landing-nav {
-    background-color: purple;
+    float: right;
+    background-color: transparent;
     color: white;
     text-align: right;
-    font-size: 16px;
+    font-size: 17px;
+    font-weight: 600;
+    padding: .6%
 }
 .landing-login-register-btn {
     color: purple;
@@ -13,4 +16,19 @@
     color: orangered;
     font-size: 14px;
     font-weight: 600
+}
+.logo {
+    background: url('../assets/logo/logo2.jpeg') no-repeat center center;
+    width: 100px;
+    height: 100px
+}
+.back-image {
+    background: url('../assets/landing-page/matr-image3') no-repeat center center;
+}
+
+@media only screen and (max-width: 768px) {
+    .back-image {
+        background: url('../assets/landing-page/matr-image3') no-repeat center center;
+        background-size: cover
+    }
 }
