--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -1,30 +1,44 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center">
-  <div class="landing-nav">
-    <ul style="">
-      <li><a>Home</a></li>
-      <li><a>Dashboard</a></li>
-      <li><a>Register</a></li>
-      <li><a>Login</a></li>
-    </ul>
-  </div>
-  <img src="assets/landing-page/matr-image3" style="width: 99%; height: 400px">  
-  <div style="text-align: center">
-    <ul class="landing-login-register-btn">
-      <li style="border-right: 1px solid purple"><a>Register</a></li>
-      <li><a>Login</a></li>
-    </ul>
-  </div>
-  <div style="position: relative">
-    <img src="assets/landing-page/matr-image1" style="width: 49%; height: 300px">
-    <img src="assets/landing-page/matr-image2" style="width: 49%; height: 300px">
-  </div>
-  <div class="landing-footer-nav">
-    <ul>
-      <li style="border-right: 1px solid orangered">Chat with your partner</li>
-      <li style="border-right: 1px solid orangered">My ideal partner</li>
-      <li>Verify your profile</li>
-    </ul>
+
+  <!-- <img src="assets/landing-page/matr-image3" >   -->
+<div style="padding: 0px 100px">
+
+  
+<div class="back-image">
+  <div>
+    <div style="">
+      <img src="assets/logo/logo2.jpeg" style="width:100px" />
+      <div class="landing-nav">
+        <ul style="">
+          <li><a>Home</a></li>
+          <li><a>Dashboard</a></li>
+          <li><a>Register</a></li>
+          <li><a>Login</a></li>
+        </ul>
+      </div>
+    </div>
+    <div style="color:transparent; height: 300px">
+    </div>
   </div>
 </div>
-
+<div style="text-align: center">
+  <ul class="landing-login-register-btn">
+    <li style="border-right: 1px solid purple"><a>Register</a></li>
+    <li><a>Login</a></li>
+  </ul>
+</div>
+<div style="position: relative">
+  <img src="assets/landing-page/matr-image1" style="width: 49%; height: 300px">
+  <img src="assets/landing-page/matr-image2" style="width: 49%; height: 300px">
+</div>
+<div class="landing-footer-nav">
+  <ul>
+    <li style="border-right: 1px solid orangered">Chat with your partner</li>
+    <li style="border-right: 1px solid orangered">My ideal partner</li>
+    <li>Verify your profile</li>
+  </ul>
+</div>
+<footer style="height: 50px; background-color: #ccc; color: black">
+  <app-footer></app-footer>
+</footer>
+</div>
