--- a/matrimony-ui/src/styles.scss
+++ b/matrimony-ui/src/styles.scss
@@ -1,5 +1,11 @@
+$fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webfonts";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/regular.scss";
+@import "../node_modules/@fortawesome/fontawesome-free/scss/solid.scss";
 body {
-    font-size: 14px
+    font-size: 14px;
+    font-family: 'Roboto', sans-serif!important
 }
 ul {
     list-style-type: none;
