--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -1,44 +1,62 @@
 <!--The content below is only a placeholder and can be replaced.-->
 
   <!-- <img src="assets/landing-page/matr-image3" >   -->
-<div style="padding: 0px 100px">
-
-  
-<div class="back-image">
-  <div>
-    <div style="">
-      <img src="assets/logo/logo2.jpeg" style="width:100px" />
+<div style="padding: 0px 0px">
+  <div style="font-size: 48px; font-weight: 700; text-align: center">
+    <img src="assets/logo/logo2.jpeg" style="width:80px; float: left" />
+    <span style="color: rgb(248, 73, 82); vertical-align: center">रेशीमबंध </span>
+    <span style="color: rgb(3, 81, 184)">तुमचे </span>
+    <span style="color: rgb(247, 191, 8)">आमचे </span>
+  </div>
+  <div class="back-image">
       <div class="landing-nav">
-        <ul style="">
-          <li><a>Home</a></li>
-          <li><a>Dashboard</a></li>
-          <li><a>Register</a></li>
-          <li><a>Login</a></li>
-        </ul>
-      </div>
+          <ul style="">
+            <li><a>Home</a></li>
+            <li><a>Dashboard</a></li>
+            <li><a>Register</a></li>
+            <li><a>Login</a></li>
+          </ul>
+        </div>
+  </div>
+  <div style="text-align: center; margin: 10px; border-bottom: 1px slid #eee">
+    <ul>
+      <li class="landing-login-register-btn" style="background-color: rgb(3, 81, 184)">
+        <a>Register</a>
+      </li>
+      <li class="landing-login-register-btn" style="background-color: rgb(248, 73, 82)">
+        <a>Login</a>
+      </li>
+    </ul>
+  </div>
+  <div style="position: relative">
+    <img src="assets/landing-page/matr-image1" style="width: 32%; height: 300px">
+    <img src="assets/landing-page/matr-image2" style="width: 32%; height: 300px">
+  </div>
+  <div class="landing-footer-nav">
+    <ul>
+      <li class="action-btn-circle" style="background-color: rgb(248, 73, 82)">
+        Chat with your partner
+      </li>
+      <li class="action-btn-circle" style="background-color: rgb(3, 81, 184)">
+        My ideal partner
+      </li>
+      <li class="action-btn-circle" style="background-color: rgb(247, 191, 8)">
+        Verify your profile
+      </li>
+    </ul>
+  </div>
+  <div style="margin: 10px 0px; color: #72727d; font-size: 16px">
+    <div style="display: inline-block; padding: 10px; width: 45%; border-top: 2px solid #eee; margin-right: 10px">
+      Why Reshimbandh tumche amche ? <br />
+      Term & conditions <br />
+      Privacy policy <br />
+      Payment options
     </div>
-    <div style="color:transparent; height: 300px">
+    <div style="display: inline-block; padding: 10px; width: 46%; text-align: right; vertical-align: top; border-top: 2px solid #eee">
+      Call us
     </div>
   </div>
-</div>
-<div style="text-align: center">
-  <ul class="landing-login-register-btn">
-    <li style="border-right: 1px solid purple"><a>Register</a></li>
-    <li><a>Login</a></li>
-  </ul>
-</div>
-<div style="position: relative">
-  <img src="assets/landing-page/matr-image1" style="width: 49%; height: 300px">
-  <img src="assets/landing-page/matr-image2" style="width: 49%; height: 300px">
-</div>
-<div class="landing-footer-nav">
-  <ul>
-    <li style="border-right: 1px solid orangered">Chat with your partner</li>
-    <li style="border-right: 1px solid orangered">My ideal partner</li>
-    <li>Verify your profile</li>
-  </ul>
-</div>
-<footer style="height: 50px; background-color: #ccc; color: black">
-  <app-footer></app-footer>
-</footer>
+  <footer style="height: 50px; background-color: #ccc; color: black">
+    <app-footer></app-footer>
+  </footer>
 </div>
