--- a/matrimony-ui/src/app/app.component.css
+++ b/matrimony-ui/src/app/app.component.css
@@ -1,19 +1,21 @@
 .landing-nav {
-    float: right;
-    background-color: transparent;
+    background-color: rgb(194, 104, 146);
     color: white;
     text-align: right;
     font-size: 17px;
     font-weight: 600;
-    padding: .6%
+    padding: 10px 20px;
+    margin: 3px 0px 2px 0px
 }
 .landing-login-register-btn {
-    color: purple;
+    color: white;
     font-size: 16px;
-    font-weight: 600
+    width: 100px
+}
+landing-login-register-btn li {
+    background-color: red
 }
 .landing-footer-nav {
-    color: orangered;
     font-size: 14px;
     font-weight: 600
 }
@@ -23,9 +25,17 @@
     height: 100px
 }
 .back-image {
-    background: url('../assets/landing-page/matr-image3') no-repeat center center;
+    background: url('../assets/landing-page/matr-image3') repeat center center;
+    height: 400px;
 }
-
+.action-btn-circle {
+    margin: 10px;
+    color: white;
+    width: 150px;
+    border-radius: 100px;
+    padding: 10px 20px;
+    text-align: center
+}
 @media only screen and (max-width: 768px) {
     .back-image {
         background: url('../assets/landing-page/matr-image3') no-repeat center center;
