--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -3,7 +3,7 @@
   <!-- <img src="assets/landing-page/matr-image3" >   -->
 <div style="padding: 0px 0px">
   <div style="font-size: 48px; font-weight: 700; text-align: center">
-    <img src="assets/logo/logo2.jpeg" style="width:80px; float: left" />
+    <img src="assets/logo/matr-logo2" style="width:80px; float: left" />
     <span style="color: rgb(248, 73, 82); vertical-align: center">रेशीमबंध </span>
     <span style="color: rgb(3, 81, 184)">तुमचे </span>
     <span style="color: rgb(247, 191, 8)">आमचे </span>
