--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -2,61 +2,63 @@
 
   <!-- <img src="assets/landing-page/matr-image3" >   -->
 <div style="padding: 0px 0px">
-  <div style="font-size: 48px; font-weight: 700; text-align: center">
-    <img src="assets/logo/matr-logo2" style="width:80px; float: left" />
-    <span style="color: rgb(248, 73, 82); vertical-align: center">रेशीमबंध </span>
-    <span style="color: rgb(3, 81, 184)">तुमचे </span>
-    <span style="color: rgb(247, 191, 8)">आमचे </span>
+  <div style="">
+    <img src="assets/logo/matr-logo2" style="width: 10%" />
+    <div style="display: inline-block; width: 78%; text-align: center; font-weight: bold">
+      <div style="height: 50px;  background-color: #ccc">Advertisement</div>
+      <img src="assets/landing-page/matr_header.png" style="width: 40%"/>
+    </div>
   </div>
-  <div class="back-image">
-      <div class="landing-nav">
-          <ul style="">
-            <li><a>Home</a></li>
-            <li><a>Dashboard</a></li>
-            <li><a>Register</a></li>
-            <li><a>Login</a></li>
-          </ul>
-        </div>
+  <div>
+    <div class="toran"></div>
+    <div class="swastik_kalash"></div>
   </div>
-  <div style="text-align: center; margin: 10px; border-bottom: 1px slid #eee">
-    <ul>
-      <li class="landing-login-register-btn" style="background-color: rgb(3, 81, 184)">
-        <a>Register</a>
-      </li>
-      <li class="landing-login-register-btn" style="background-color: rgb(248, 73, 82)">
-        <a>Login</a>
-      </li>
+  <div class="landing-nav">
+    <ul style="">
+      <li><a>Home</a></li>
+      <li><a>Dashboard</a></li>
+      <li><a>Register</a></li>
+      <li style="border: none"><a>Login</a></li>
     </ul>
+</div>
+  <div style="margin-bottom: 20px">
+      <img src="/assets/landing-page/matr_banner.png" style="width:100%; height: 400px" /> 
   </div>
-  <div style="position: relative">
-    <img src="assets/landing-page/matr-image1" style="width: 32%; height: 300px">
-    <img src="assets/landing-page/matr-image2" style="width: 32%; height: 300px">
+  <div class="landing-login-register-btn" style="width: 150px; padding: 10px; text-align: center; margin: auto; border-radius: 5px">
+        <a style="display: inline-block">Register</a>/
+        <a style="display: inline-block">Login</a>
   </div>
+  <div style="margin-top:20px">
+    <img src="assets/landing-page/matr-image1" style="width: 32%; height: 300px; margin: 0px 3px">
+    <img src="assets/landing-page/matr-image2" style="width: 32%; height: 300px; margin: 0px 3px">
+    <img src="assets/landing-page/matr-image3" style="width: 32%; height: 300px; margin: 0px 3px">
+  </div>
+  <hr style="margin: 1px 0px; border: 1px solid red">
   <div class="landing-footer-nav">
     <ul>
-      <li class="action-btn-circle" style="background-color: rgb(248, 73, 82)">
+      <li class="action-btn-circle">
         Chat with your partner
       </li>
-      <li class="action-btn-circle" style="background-color: rgb(3, 81, 184)">
+      <li class="action-btn-circle">
         My ideal partner
       </li>
-      <li class="action-btn-circle" style="background-color: rgb(247, 191, 8)">
+      <li class="action-btn-circle">
         Verify your profile
       </li>
     </ul>
   </div>
-  <div style="margin: 10px 0px; color: #72727d; font-size: 16px">
-    <div style="display: inline-block; padding: 10px; width: 45%; border-top: 2px solid #eee; margin-right: 10px">
+  <div style="margin: 1px 0px; color: maroon; font-size: 16px; border-top: 2px solid red; border-bottom: 2px solid red">
+    <div style="display: inline-block; padding: 10px; width: 45%;  margin-right: 10px">
       Why Reshimbandh tumche amche ? <br />
       Term & conditions <br />
       Privacy policy <br />
       Payment options
     </div>
-    <div style="display: inline-block; padding: 10px; width: 46%; text-align: right; vertical-align: top; border-top: 2px solid #eee">
-      Call us
+    <div style="display: inline-block; padding: 10px; width: 46%; text-align: right; vertical-align: top">
+      Call us :
     </div>
   </div>
-  <footer style="height: 50px; background-color: #ccc; color: black">
+  <footer style="height: 50px; color: maroon; border-top: 4px solid red">
     <app-footer></app-footer>
   </footer>
 </div>
