--- a/matrimony-ui/src/app/footer/footer.component.html
+++ b/matrimony-ui/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
   <span style="margin: 5px; color: white; background-color: rgb(187, 7, 187); display: inline-block; padding: 5px; border-radius: 4px">
     <i class="fab fa-instagram"></i>
   </span>
-  <span style="float:right; margin: 5px; font-size: 16px; color: white;  padding: 5px">
+  <span style="float:right; margin: 5px; font-size: 16px; padding: 5px">
     S Square Softech Solutions
   </span>
 </div>
