Added navigation and UI for registration

--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -2,7 +2,7 @@
 
   <!-- <img src="assets/landing-page/matr-image3" >   -->
 <div style="padding: 0px 0px">
-  <div style="">
+  <div style="border-bottom: 3px solid red">
     <img src="assets/logo/matr-logo2" style="width: 10%" />
     <div style="display: inline-block; width: 78%; text-align: center; font-weight: bold">
       <div style="height: 50px;  background-color: #ccc">Advertisement</div>
