--- a/matrimony-ui/src/app/landing-page/components/shell/shell.component.html
+++ b/matrimony-ui/src/app/landing-page/components/shell/shell.component.html
@@ -6,21 +6,21 @@
   <ul style="">
     <li><a>Home</a></li>
     <li><a>Dashboard</a></li>
-    <li><a>Register</a></li>
+    <li><a (click)="navigateToRegistration()">Register</a></li>
     <li style="border: none"><a>Login</a></li>
   </ul>
 </div>
 <div style="margin-bottom: 20px">
     <img src="/assets/landing-page/matr_banner.png" style="width:100%; height: 400px" /> 
 </div>
-<div class="landing-login-register-btn" style="width: 150px; padding: 10px; text-align: center; margin: auto; border-radius: 5px">
-      <a style="display: inline-block">Register</a>/
-      <a style="display: inline-block">Login</a>
+<div class="landing-login-register-btn">
+      <a (click)="navigateToRegistration()">Register</a> /
+      <a>Login</a>
 </div>
-<div style="margin-top:20px">
-  <img src="assets/landing-page/matr-image1" style="width: 32%; height: 300px; margin: 0px 3px">
-  <img src="assets/landing-page/matr-image2" style="width: 32%; height: 300px; margin: 0px 3px">
-  <img src="assets/landing-page/matr-image3" style="width: 32%; height: 300px; margin: 0px 3px">
+<div class="img-msg">
+  <img src="assets/landing-page/matr-image1" />
+  <img src="assets/landing-page/matr-image2" />
+  <img src="assets/landing-page/matr-image3" />
 </div>
 <hr style="margin: 1px 0px; border: 1px solid red">
 <div class="landing-footer-nav">
@@ -36,14 +36,14 @@
     </li>
   </ul>
 </div>
-<div style="margin: 1px 0px; color: maroon; font-size: 16px; border-top: 2px solid red; border-bottom: 2px solid red">
-  <div style="display: inline-block; padding: 10px; width: 45%;  margin-right: 10px">
+<div class="company-info-payment-options">
+  <div style="margin-right: 10px">
     Why Reshimbandh tumche amche ? <br />
     Term & conditions <br />
     Privacy policy <br />
     Payment options
   </div>
-  <div style="display: inline-block; padding: 10px; width: 46%; text-align: right; vertical-align: top">
+  <div style="text-align: right; vertical-align: top">
     Call us :
   </div>
 </div>
