--- a/matrimony-ui/src/app/landing-page/components/shell/shell.component.scss
+++ b/matrimony-ui/src/app/landing-page/components/shell/shell.component.scss
@@ -14,27 +14,51 @@
 
 .landing-nav {
     background-color: red;
-    color: white;
+    color: #f1f8e9;
     text-align: right;
     font-size: 15px;
     font-weight: 400;
     padding: 1px 20px;
-    margin: 3px 0px
-}
+    margin: 3px 0px;
 
-.landing-nav li {
-    border-right: 1px solid white
+    li {
+        border-right: 1px solid #f1f8e9;
+        cursor: pointer;
+    }
+    li:hover {
+        background-color: #f1f8e9;
+        color: red
+    }
 }
 
 .landing-login-register-btn {
     background-color: red;
-    color: white;
+    color: #f1f8e9;
     font-size: 16px;
-    width: 100px
+    width: 150px;
+    padding: 10px;
+    text-align: center;
+    margin: auto;
+    border-radius: 5px;
+
+    a {
+        display: inline-block;
+        padding: 5px 2px;
+        cursor: pointer;
+    }
+
+    a:hover {
+        background-color: #f1f8e9;
+        color: red
+    }
 }
 
-
-
+.img-msg {
+    margin-top: 20px;
+    img {
+        width: 32%; height: 300px; margin: 0px 3px
+    }
+}
 
 .action-btn-circle {
     margin: 10px 5px;
@@ -53,6 +77,19 @@
     border-bottom: 4px solid red;
 }
 
+.company-info-payment-options {
+    margin: 1px 0px;
+    color: maroon;
+    font-size: 16px;
+    border-top: 2px solid red;
+    border-bottom: 2px solid red;
+
+    div {
+        display: inline-block;
+        padding: 10px;
+        width: 45%;
+    }
+}
 @media only screen and (max-width: 768px) {
     .back-image {
         background: url('../../../../assets/landing-page/matr_banner.png') no-repeat center center;
