--- a/matrimony-ui/src/styles.scss
+++ b/matrimony-ui/src/styles.scss
@@ -1,3 +1,5 @@
+// @import "../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css";
+@import "../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css";
 $fa-font-path: "../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "../node_modules/@fortawesome/fontawesome-free/scss/brands.scss";
