--- a/matrimony-ui/src/app/landing-page/components/shell/shell.component.html
+++ b/matrimony-ui/src/app/landing-page/components/shell/shell.component.html
@@ -2,14 +2,7 @@
   <div class="toran"></div>
   <div class="swastik_kalash"></div>
 </div>
-<div class="landing-nav">
-  <ul style="">
-    <li><a>Home</a></li>
-    <li><a>Dashboard</a></li>
-    <li><a (click)="navigateToRegistration()">Register</a></li>
-    <li style="border: none"><a>Login</a></li>
-  </ul>
-</div>
+<matr-main-nav></matr-main-nav>
 <div style="margin-bottom: 20px">
     <img src="/assets/landing-page/matr_banner.png" style="width:100%; height: 400px" /> 
 </div>
@@ -47,3 +40,4 @@
     Call us :
   </div>
 </div>
+
