--- a/matrimony-ui/src/app/main-navigation/components/main-nav/main-nav.component.html
+++ b/matrimony-ui/src/app/main-navigation/components/main-nav/main-nav.component.html
@@ -2,7 +2,7 @@
   <ul style="">
     <li><a>Home</a></li>
     <li (click)="navigateToDashboard()"><a>Dashboard</a></li>
-    <li (click)="navigateToRegistration()"><a>Register</a></li>
+    <li id="register" (click)="navigateToRegistration()"><a>Register</a></li>
     <li style="border: none" (click)="openLoginDialog()"><a>Login</a></li>
   </ul>
 </div>
