--- a/matrimony-ui/src/app/user-registration/components/user-registration/user-registration.component.html
+++ b/matrimony-ui/src/app/user-registration/components/user-registration/user-registration.component.html
@@ -1,4 +1,4 @@
-<div style=" width: 50%; margin: 5px auto; color: red; font-size: 20px">
+<div class="matr-reg-header" style="width: 50%; margin: 5px auto; color: red; font-size: 20px">
   Registration
 </div>
 <mat-card style="background-color: #fff; width: 50%; margin: 10px auto">
