--- a/matrimony-ui/src/app/app.component.html
+++ b/matrimony-ui/src/app/app.component.html
@@ -5,7 +5,7 @@
   <div style="border-bottom: 3px solid red">
     <img src="assets/logo/matr-logo2" style="width: 10%" />
     <div style="display: inline-block; width: 78%; text-align: center; font-weight: bold">
-      <div style="height: 50px;  background-color: #ccc">Advertisement</div>
+      <h1 style="height: 50px;  background-color: #ccc">Advertisement</h1>
       <img src="assets/landing-page/matr_header.png" style="width: 40%"/>
     </div>
   </div>
