--- a/matrimony-ui/src/app/landing-page/components/shell/shell.component.scss
+++ b/matrimony-ui/src/app/landing-page/components/shell/shell.component.scss
@@ -76,4 +76,12 @@
         background: url('../../../../assets/landing-page/matr_banner.png') no-repeat center center;
         background-size: cover
     }
+    .img-msg {
+        img {
+            margin-top: 5px;
+            width: 100%;
+            height: 300px;
+            margin: 0px 3px
+        }
+    }
 }
