added tesseract for image reading

--- a/matrimony-ui/src/app/dashboard/components/dashboard/dashboard.component.html
+++ b/matrimony-ui/src/app/dashboard/components/dashboard/dashboard.component.html
@@ -23,5 +23,6 @@
   <div #dropzone style="margin-top: 100px; width: 200px; height: 200px; margin: 30px auto; border: 1px solid #ccc"
     (dragenter)="dropZoneEnter($event)" (dragover)="dropZoneOver($event)" (drop)="dropZoneDrop($event)">Drag
     and drop your files here</div>
-  <div #preview></div>
+    <button (click)="triggerImageReader()">trigge image reader</button>
+  <img #preview />
 </div>
